Fix nested blockquote spacing.

--- a/assets/styles/partials/_main.scss
+++ b/assets/styles/partials/_main.scss
@@ -131,6 +131,9 @@
 				&:first-child:before, &:last-child:after { display: none }
 			}
 
+			// Nested last paragraph margin “collapses” up.
+			> blockquote > p:last-child:after { display: none }
+
 			> p, > blockquote, > ul, > ol {
 				// Space between nested block elements.
 				&:not(:first-child) { margin-top: var(--typography--line) }
